This is My Portfolio

--- a/index.html
+++ b/index.html
@@ -430,7 +430,7 @@
   <footer id="footer">
     <div class="container">
       <div class="credits">
-        Designed and Created by : <br><a href="#hero">Rahul Jhamtani</a>
+        <a href="#hero">Rahul Jhamtani</a>
       </div>
     </div>
   </footer><!-- End  Footer -->
