--- a/project-one.html
+++ b/project-one.html
@@ -136,14 +136,14 @@
 
   </main><!-- End #main -->
 
-  <!-- ======= Footer ======= -->
-  <footer id="footer">
-    <div class="container">
-      <div class="credits">
-        Designed and Created by : <br><a href="index.html#hero">Rahul Jhamtani</a>
-      </div>
+ <!-- ======= Footer ======= -->
+ <footer id="footer">
+  <div class="container">
+    <div class="credits">
+      <a href="#hero">Rahul Jhamtani</a>
     </div>
-  </footer><!-- End  Footer -->
+  </div>
+</footer><!-- End  Footer -->
 
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
