--- a/project-two.html
+++ b/project-two.html
@@ -140,7 +140,7 @@
   <footer id="footer">
     <div class="container">
       <div class="credits">
-        Designed and Created by : <br><a href="index.html#hero">Rahul Jhamtani</a>
+        <a href="#hero">Rahul Jhamtani</a>
       </div>
     </div>
   </footer><!-- End  Footer -->
