--- a/index.html
+++ b/index.html
@@ -129,21 +129,21 @@
           <div class="col-lg-6" data-aos="fade-up">
 
             <div class="progress">
-              <span class="skill">HTML <i class="val">100%</i></span>
+              <span class="skill">HTML <i class="val">90%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">CSS <i class="val">100%</i></span>
+              <span class="skill">CSS <i class="val">90%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">JavaScript <i class="val">55%</i></span>
+              <span class="skill">JavaScript <i class="val">60%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
@@ -154,21 +154,21 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
 
             <div class="progress">
-              <span class="skill">PHP <i class="val">60%</i></span>
+              <span class="skill">PHP <i class="val">50%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">Bootstrap <i class="val">80%</i></span>
+              <span class="skill">Bootstrap <i class="val">75%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">SQL <i class="val">95%</i></span>
+              <span class="skill">SQL <i class="val">85%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
@@ -248,7 +248,7 @@
                 <li>Having a team of 6 members and different work is alloted to different persons as per their interests and qualifications</li>
               </ul>
             </div>
-              <h3 class="resume-title">Qualifications</h3>
+              <!-- <h3 class="resume-title">Qualifications</h3>
               <div class="resume-item pb-0">
                 <h5>Grades</h5>
                 <ul>
@@ -258,7 +258,7 @@
                   <li>10+2 : 70.68 %</li>
                   <li>10 : 9.0 CGPA</li>
                 </ul>
-              </div>
+              </div> -->
               <h3 class="resume-title">Hobbies</h3>
               <div class="resume-item pb-0">
                 <p>Playing Cricket, Watching Movies and Listening Music</p>
