--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>Portfolio</h2>
+          <h2>Projects</h2>
           <p>Here are some projects that I have made using HTML, CSS and Python.</p>
         </div>
 
