--- a/projects/ipl/index.html
+++ b/projects/ipl/index.html
@@ -49,7 +49,7 @@
         
     </table> -->
     <div align="center">
-        <audio controls autoplay loop>
+        <audio controls loop>
             <source src="IPL theme.mp3" type="audio/mp3">
         </audio>
     </div>
