--- a/projects/mobile/html/index.html
+++ b/projects/mobile/html/index.html
@@ -44,6 +44,10 @@
 		background-size:cover;
 		background-repeat: no-repeat; 
 	}
+	footer
+	{
+		margin-top:2%;
+	}
 	@media (max-width:575px)
 	{
 		.mobile
@@ -152,6 +156,8 @@
 
 </table>
 </center>
+
+<div><footer class="page-footer"><p class="copy footer-copyright text-center text-dark">Created by : Rahul Jhamtani</p></footer></div>
 
 </body>
 	
