--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1>Rahul Jhamtani</h1>
-      <p>I'm <span class="typed" data-typed-items="Designer, Developer, Freelancer, Dancer"></span></p>
+      <p>I'm <span class="typed" data-typed-items="Designer, Developer, Freelancer"></span></p>
     </div>
   </section><!-- End Hero -->
 
@@ -261,7 +261,7 @@
               </div> -->
               <h3 class="resume-title">Hobbies</h3>
               <div class="resume-item pb-0">
-                <p>Playing Cricket, Watching Movies and Listening Music</p>
+                <p>Playing Cricket, Watching Movies, Dancing and Listening Music</p>
               </div>
           </div>
         </div>
