--- a/project-three.html
+++ b/project-three.html
@@ -51,7 +51,7 @@
           <a href="https://github.com/rahulkumarjhamtani" class="github" target="_blank"><i class="bx bxl-github"></i></a>
           <a href="https://www.hackerrank.com/rahuljhamtani" class="hackerrank" target="_blank"><i class="bx bxl-hackerrank">H</i></a>
           <a href="https://www.coursera.org/user/1fde88f2a827ae281673ad9e7367dae5" class="coursera" target="_blank"><i class="bx bxl-coursera">C</i></a>
-          <a href="https://www.linkedin.com/in/rahul-jhamtani-195a51145/" class="linkedin" target="_blank"><i class="bx bxl-linkedin"></i></a>
+          <a href="https://www.linkedin.com/in/rahul-jhamtani/" class="linkedin" target="_blank"><i class="bx bxl-linkedin"></i></a>
         </div>
       </div>
 
