--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
   </header><!-- End Header -->
 
   <!-- ======= Hero Section ======= -->
-  <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
+  <section id="hero" class="d-flex flex-column align-items-center">          <!--   justify-content-center  -->
     <div class="hero-container" data-aos="fade-in">
       <h1>Rahul Jhamtani</h1>
       <p>I'm <span class="typed" data-typed-items="Designer, Developer, Freelancer"></span></p>
