--- a/projects/mobile/html/index.html
+++ b/projects/mobile/html/index.html
@@ -122,7 +122,7 @@
 <!-- Initial background->
 ../img/space_planet_light_night_sky_94442_480x800.jpg -->
 
-<center><table class="mobile" background="https://source.unsplash.com/1600x900/?nature,space">
+<center><table class="mobile" background="https://source.unsplash.com/1600x900/?nature,space,water">
 <tr>
 <th><i class="fa fa-signal" style="color:white;"></i></th>
 <th><i class="fa fa-camera" style="color:white;"></i></th>
