--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
               <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid setimg" alt="">
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/portfolio-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="IPL"><i class="bx bx-plus"></i></a>
-                <a href="projects/ipl/index.html" target="_blank" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="https://rahulkumarjhamtani.github.io/ipl/" target="_blank" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
@@ -299,7 +299,7 @@
               <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid setimg" alt="">
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/portfolio-2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Car Animation"><i class="bx bx-plus"></i></a>
-                <a href="project-one.html" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="projects/project-one.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
@@ -309,7 +309,7 @@
               <img src="assets/img/portfolio/portfolio-3.jpg" class="img-fluid setimg" alt="">
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/portfolio-3.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Mobile"><i class="bx bx-plus"></i></a>
-                <a href="projects/mobile/html/index.html" target="_blank" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="https://rahulkumarjhamtani.github.io/mobile/" target="_blank" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
@@ -319,7 +319,7 @@
               <img src="assets/img/portfolio/portfolio-4.jpg" class="img-fluid setimg" alt="">
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/portfolio-4.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="PlusPad"><i class="bx bx-plus"></i></a>
-                <a href="project-two.html" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="projects/project-two.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
@@ -329,7 +329,7 @@
               <img src="assets/img/portfolio/portfolio-5.jpg" class="img-fluid setimg" alt="">
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/portfolio-5.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 2"><i class="bx bx-plus"></i></a>
-                <a href="project-three.html" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="projects/project-three.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
