--- a/projects/project-three.html
+++ b/projects/project-three.html
@@ -40,7 +40,7 @@
 
       <div class="profile">
         <img src="../assets/img/profile-img.jpg" alt="" class="img-fluid rounded-circle">
-        <h1 class="text-light"><a href="index.html">Rahul K. Jhamtani</a></h1>
+        <h1 class="text-light"><a href="../index.html">Rahul K. Jhamtani</a></h1>
         <div class="social-links mt-3 text-center">
           <a href="https://github.com/rahulkumarjhamtani" class="github" target="_blank"><i class="bx bxl-github"></i></a>
           <a href="https://www.hackerrank.com/rahuljhamtani" class="hackerrank" target="_blank"><i class="bx bxl-hackerrank">H</i></a>
@@ -51,12 +51,12 @@
 
       <nav id="navbar" class="nav-menu navbar">
         <ul>
-          <li><a href="index.html#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>
-          <li><a href="index.html#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
-          <li><a href="index.html#skills" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Skills</span></a></li>
-          <li><a href="index.html#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
-          <li><a href="index.html#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Projects</span></a></li>
-          <li><a href="index.html#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
+          <li><a href="../index.html#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>
+          <li><a href="../index.html#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
+          <li><a href="../index.html#skills" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Skills</span></a></li>
+          <li><a href="../index.html#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
+          <li><a href="../index.html#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Projects</span></a></li>
+          <li><a href="../index.html#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
         </ul>
       </nav><!-- .nav-menu -->
     </div>
@@ -71,7 +71,7 @@
         <div class="d-flex justify-content-between align-items-center">
           <h2>Project Details</h2>
           <ol>
-            <li><a href="index.html">Home</a></li>
+            <li><a href="../index.html">Home</a></li>
             <li>Project Details</li>
           </ol>
         </div>
@@ -134,7 +134,7 @@
   <footer id="footer">
     <div class="container">
       <div class="credits">
-        <a href="index.html#hero">Rahul Jhamtani</a>
+        <a href="../index.html#hero">Rahul Jhamtani</a>
       </div>
     </div>
   </footer><!-- End  Footer -->
