--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
             <h3 class="resume-title">Professional Experience</h3>
             <!-- <div class="resume-item pb-0"> -->
               <div class="resume-item">
-              <h4>Intern at Tribal Connect </h4>
+              <h4>Intern at Tribal Connect : Connecting Our Roots</h4>
               <h5>June 2021 - Present</h5>
               <p><em>Jaipur, Raj.</em></p>
               <ul>
