--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
               <h4>Primary and Secondary Schooling</h4>
               <h5>2007 - 2019</h5>
               <p><em>Maheshwari Public School, Jaipur, Raj.</em></p>
-              <p>It is Rajasthan's 3rd ranked Boys school especially known for its studies. I studied in this school from Class 1 to 12.</p>
+              <p>Affiliated to the Central Board of Senior Secondary Education, it prepares students for 10+2 pattern of examination catering to Science and Commerce faculties.</p>
             </div>
           </div>
           <div class="col-lg-6" data-aos="fade-up">
