--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
               <h4>Bachelors of Technology</h4>
               <h5>2019 - Present</h5>
               <p><em>Anand International College of Engineering, Jaipur, Raj.</em></p>
-              <p>It is a good college which provides Bachelor of Technology and Bachelor of Science degrees to students with great technical, practical as well as soft skills.</p>
+              <p>Anand-ICE, one of the finest private engineering colleges in Jaipur, has probably the best brains as teachers and scientists to facilitate premium academic excellence along with the nuances of ethics and human values.</p>
             </div>
             <div class="resume-item">
               <h4>Primary and Secondary Schooling</h4>
