--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
 
         <div class="section-title">
           <h2>Projects</h2>
-          <p>Here are some projects that I have made using HTML, CSS and Python.</p>
+          <p>Here are some projects that I have made using HTML, CSS, JavaScript and Python.</p>
         </div>
 
         <div class="row" data-aos="fade-up">
@@ -389,7 +389,8 @@
                 <p>+91 72209 88840</p>
               </div>
 
-              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d889.5002592428738!2d75.89586982917945!3d26.903462194903152!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMjbCsDU0JzEyLjUiTiA3NcKwNTMnNDcuMSJF!5e0!3m2!1sen!2sin!4v1618215598418!5m2!1sen!2sin" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe>
+              <!-- <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d889.5002592428738!2d75.89586982917945!3d26.903462194903152!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMjbCsDU0JzEyLjUiTiA3NcKwNTMnNDcuMSJF!5e0!3m2!1sen!2sin!4v1618215598418!5m2!1sen!2sin" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe> -->
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d889.5002592428738!2d75.89586982917945!3d26.903462194903152!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMjbCsDU0JzEyLjUiTiA3NcKwNTMnNDcuMSJF!5e0!3m2!1sen!2sin!4v1618215598418!5m2!1sen!2sin" width="600" height="450" style="border:0; width: 100%; height: 290px;" allowfullscreen="" mapTypeId="satellite" loading="lazy"></iframe>
             </div>
 
           </div>
