--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-7.jpg" class="img-fluid setimg" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-7.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Extentions"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/portfolio/portfolio-7.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Login-Pages"><i class="bx bx-plus"></i></a>
                 <a href="projects/project-five.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
