--- a/index.html
+++ b/index.html
@@ -363,6 +363,17 @@
               </div>
             </div>
           </div>
+          
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/portfolio-8.jpg" class="img-fluid setimg" alt="">
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/portfolio-8.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="World Clock"><i class="bx bx-plus"></i></a>
+                <a href="https://rahulkumarjhamtani.github.io/Time-Now/" target="_blank" title="More Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+
         </div>
 
       </div>
