--- a/index.html
+++ b/index.html
@@ -376,19 +376,19 @@
           
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-8.jpg" class="img-fluid setimg" alt="">
+              <img src="assets/img/portfolio/portfolio-9.jpg" class="img-fluid setimg" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-8.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Bank"><i class="bx bx-plus"></i></a>
-                <a href="https://rahulkumarjhamtani.github.io/Time-Now/" target="_blank" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="assets/img/portfolio/portfolio-9.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Bank"><i class="bx bx-plus"></i></a>
+                <a href="https://vcfstudio.in/sparksbank/" target="_blank" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
           
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-10.jpg" class="img-fluid setimg" alt="">
+              <img src="assets/img/portfolio/portfolio-10.png" class="img-fluid setimg" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-10.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Trees Nation"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/portfolio/portfolio-10.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Trees Nation"><i class="bx bx-plus"></i></a>
                 <a href="https://rahulkumarjhamtani.github.io/Trees-Nation/" target="_blank" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
