--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 </head>
 
-<body>
+<body onload="loadpage()">
 
   <!-- ======= Mobile nav toggle button ======= -->
   <i class="bi bi-list mobile-nav-toggle d-xl-none"></i>
@@ -68,6 +68,12 @@
       </nav><!-- .nav-menu -->
     </div>
   </header><!-- End Header -->
+
+  <!-- Loading Section -->
+  <div class="square" id="stopflip">
+    <div></div>
+    <div></div>
+  </div>
 
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex flex-column align-items-center">
