--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
   <link
     href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
     rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/aos/aos.css" rel="stylesheet">
@@ -117,7 +117,8 @@
                   <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>20</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>B. Tech</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong>
-                    <span>rahulkumarjhamtani@gmail.com</span></li>
+                    <span>rahulkumarjhamtani@gmail.com</span>
+                  </li>
                 </ul>
               </div>
             </div>
@@ -266,19 +267,15 @@
               <p>Affiliated to the Central Board of Senior Secondary Education, it prepares students for 10+2 pattern of
                 examination catering to Science and Commerce faculties.</p>
             </div>
+            <h3 class="resume-title">Hobbies</h3>
+            <div class="resume-item pb-0">
+              <p>Playing Cricket, Watching Movies, Dancing and Listening Music</p>
+            </div>
+            <div class="text-center"><button type="submit">Download Resume</button></div>
           </div>
           <div class="col-lg-6" data-aos="fade-up">
             <h3 class="resume-title">Professional Experience</h3>
             <!-- <div class="resume-item pb-0"> -->
-            <div class="resume-item">
-              <h4>Intern at Tribal Connect : Connecting Our Roots</h4>
-              <h5>June 2021 - Present</h5>
-              <p><em>Jaipur, Raj.</em></p>
-              <ul>
-                <li>Started a new journey on June 11, 2021</li>
-                <li>Interning as a Web Designer and feeling great to work for an NGO</li>
-              </ul>
-            </div>
             <div class="resume-item">
               <h4>Web Designer and Presenter at VCF</h4>
               <h5>2020 - Present</h5>
@@ -288,7 +285,29 @@
                 <li>Lead in the design, development, and implementation of the graphic, layout, production and
                   communication</li>
                 <li>Having a team of 6 members and different work is alloted to different persons as per their interests
-                  and qualifications</li>
+                  and skills</li>
+              </ul>
+            </div>
+            <div class="resume-item">
+              <h4>Intern at Tribal Connect : Connecting Our Roots</h4>
+              <h5>June 2021 - Present</h5>
+              <p><em>Jaipur, Raj.</em></p>
+              <ul>
+                <li>Started a new journey on June 11, 2021</li>
+                <li>Interning as a Web Designer and feeling great to work for an NGO</li>
+                <li>Made gallery for them which contains multiple images of their events</li>
+                <li>Reach : <a href="https://tribalconnect.org.in/" target="blank">Tribal Connect : Connecting Our Roots</a></li>
+              </ul>
+            </div>
+            <div class="resume-item">
+              <h4>Intern at The Sparks Foundation</h4>
+              <h5>August 2021 - September 2021</h5>
+              <p><em>Jaipur, Raj.</em></p>
+              <ul>
+                <li>Interned as Web Developer and Designer</li>
+                <li>Everyone has given some tasks which we have to submitted in the given span of time</li>
+                <li>I had completed both the tasks of web development [Basic Banking System, Payment Gateway Integration]</li>
+                <li>Reach : <a href="https://internship.thesparksfoundation.info/" target="blank">The Sparks Foundation</a></li>
               </ul>
             </div>
             <!-- <h3 class="resume-title">Qualifications</h3>
@@ -302,10 +321,7 @@
                   <li>10 : 9.0 CGPA</li>
                 </ul>
               </div> -->
-            <h3 class="resume-title">Hobbies</h3>
-            <div class="resume-item pb-0">
-              <p>Playing Cricket, Watching Movies, Dancing and Listening Music</p>
-            </div>
+            
           </div>
         </div>
 
