--- a/index.html
+++ b/index.html
@@ -271,8 +271,9 @@
             <div class="resume-item pb-0">
               <p>Playing Cricket, Watching Movies, Dancing and Listening Music</p>
             </div>
-            <div class="text-center"><button type="submit">Download Resume</button></div>
+            <!-- <div class="text-center"><button type="submit">Download Resume</button></div> -->
           </div>
+
           <div class="col-lg-6" data-aos="fade-up">
             <h3 class="resume-title">Professional Experience</h3>
             <!-- <div class="resume-item pb-0"> -->
