--- a/index.html
+++ b/index.html
@@ -278,6 +278,19 @@
             <h3 class="resume-title">Professional Experience</h3>
             <!-- <div class="resume-item pb-0"> -->
             <div class="resume-item">
+              <h4>Intern at The Sparks Foundation</h4>
+              <h5>August 2021 - September 2021</h5>
+              <p><em>Jaipur, Raj.</em></p>
+              <ul>
+                <li>Interned as Web Developer and Designer</li>
+                <li>Everyone has given some tasks which we have to submitted in the given span of time</li>
+                <li>I had completed both the tasks of web development [Basic Banking System, Payment Gateway
+                  Integration]</li>
+                <li>Reach : <a href="https://internship.thesparksfoundation.info/" target="blank">The Sparks
+                    Foundation</a></li>
+              </ul>
+            </div>
+            <div class="resume-item">
               <h4>Web Designer and Presenter at VCF</h4>
               <h5>2020 - Present</h5>
               <p><em>Jaipur, Raj.</em></p>
@@ -291,24 +304,14 @@
             </div>
             <div class="resume-item">
               <h4>Intern at Tribal Connect : Connecting Our Roots</h4>
-              <h5>June 2021 - Present</h5>
+              <h5>June 2021 - September 2021</h5>
               <p><em>Jaipur, Raj.</em></p>
               <ul>
                 <li>Started a new journey on June 11, 2021</li>
                 <li>Interning as a Web Designer and feeling great to work for an NGO</li>
                 <li>Made gallery for them which contains multiple images of their events</li>
-                <li>Reach : <a href="https://tribalconnect.org.in/" target="blank">Tribal Connect : Connecting Our Roots</a></li>
-              </ul>
-            </div>
-            <div class="resume-item">
-              <h4>Intern at The Sparks Foundation</h4>
-              <h5>August 2021 - September 2021</h5>
-              <p><em>Jaipur, Raj.</em></p>
-              <ul>
-                <li>Interned as Web Developer and Designer</li>
-                <li>Everyone has given some tasks which we have to submitted in the given span of time</li>
-                <li>I had completed both the tasks of web development [Basic Banking System, Payment Gateway Integration]</li>
-                <li>Reach : <a href="https://internship.thesparksfoundation.info/" target="blank">The Sparks Foundation</a></li>
+                <li>Reach : <a href="https://tribalconnect.org.in/" target="blank">Tribal Connect : Connecting Our
+                    Roots</a></li>
               </ul>
             </div>
             <!-- <h3 class="resume-title">Qualifications</h3>
@@ -322,7 +325,7 @@
                   <li>10 : 9.0 CGPA</li>
                 </ul>
               </div> -->
-            
+
           </div>
         </div>
 
