--- a/index.html
+++ b/index.html
@@ -470,9 +470,9 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-11.png" class="img-fluid setimg" alt="">
+              <img src="assets/img/portfolio/portfolio-11.jpg" class="img-fluid setimg" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-11.png" data-gallery="portfolioGallery"
+                <a href="assets/img/portfolio/portfolio-11.jpg" data-gallery="portfolioGallery"
                   class="portfolio-lightbox" title="Todo List"><i class="bx bx-plus"></i></a>
                 <a href="https://rahulkumarjhamtani.github.io/todo-list/" target="_blank" title="More Details"><i
                     class="bx bx-link"></i></a>
@@ -494,9 +494,9 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-13.png" class="img-fluid setimg" alt="">
+              <img src="assets/img/portfolio/portfolio-13.jpg" class="img-fluid setimg" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-13.png" data-gallery="portfolioGallery"
+                <a href="assets/img/portfolio/portfolio-13.jpg" data-gallery="portfolioGallery"
                   class="portfolio-lightbox" title="Notes"><i class="bx bx-plus"></i></a>
                 <a href="https://rahulkumarjhamtani.github.io/Notes/" target="_blank" title="More Details"><i
                     class="bx bx-link"></i></a>
