--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     <!--   justify-content-center  -->
     <div class="hero-container" data-aos="fade-in">
       <h1>Rahul Jhamtani</h1>
-      <p>I'm <span class="typed" data-typed-items="Designer, Developer, Freelancer"></span></p>
+      <p>I'm <span class="typed" data-typed-items="Designer, Developer, Programmer, Freelancer"></span></p>
     </div>
   </section><!-- End Hero -->
 
