--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>Hello, I am pursuing 2nd year Computer Science Engineering from Anand ICE and I am interested in Web
+          <p>Hello, I am pursuing 3rd year Computer Science Engineering from Anand ICE and I am interested in Web
             designing, Web development and Software development.</p>
         </div>
         <br>
