--- a/index.html
+++ b/index.html
@@ -368,6 +368,7 @@
             </div>
           </div>
 
+          <!-- CSS Car Animation -->
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid setimg" alt="">
@@ -379,6 +380,7 @@
             </div>
           </div>
 
+          <!-- Mobile Website -->
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-3.jpg" class="img-fluid setimg" alt="">
@@ -391,6 +393,7 @@
             </div>
           </div>
 
+          <!-- Text Editor Python -->
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-4.jpg" class="img-fluid setimg" alt="">
