--- a/index.html
+++ b/index.html
@@ -405,6 +405,7 @@
             </div>
           </div>
 
+          <!-- Songs Website -->
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-5.jpg" class="img-fluid setimg" alt="">
@@ -416,6 +417,7 @@
             </div>
           </div>
 
+          <!-- Google Chrome Extensions -->
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-6.jpeg" class="img-fluid setimg" alt="">
@@ -427,6 +429,7 @@
             </div>
           </div>
 
+          <!-- Login Pages -->
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-7.jpg" class="img-fluid setimg" alt="">
