--- a/index.html
+++ b/index.html
@@ -329,6 +329,7 @@
               </div> -->
 
           </div>
+          <a id="resumebtn" target="blank" href="assets/resume/myresume-1.pdf" download>Download Resume</a>
         </div>
 
       </div>
