--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>Hello, I am pursuing 3rd year Computer Science Engineering from Anand ICE and I am interested in Web
+          <p>Hello, I am pursuing 4th year Computer Science Engineering from Anand ICE and I am interested in Web
             designing, Web development and Software development.</p>
         </div>
         <br>
@@ -221,6 +221,14 @@
               </div>
             </div>
 
+            <div class="progress">
+              <span class="skill">Salesforce <i class="val">50%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
+                </div>
+              </div>
+            </div>
+
           </div>
         </div>
 
@@ -269,6 +277,19 @@
               <p>Affiliated to the Central Board of Senior Secondary Education, it prepares students for 10+2 pattern of
                 examination catering to Science and Commerce faculties.</p>
             </div>
+            <h3 class="resume-title">Participation</h3>
+            <div class="resume-item">
+              <h4>SoftTech Hack-2021(Offline and Online)</h4>
+              <h5>9th & 10th March 2021</h5>
+              <p><em>Anand International College of Engineering</em></p>
+              <p>Won 1st Prize</p>
+            </div>
+            <div class="resume-item">
+              <h4>SITE-2K21 (Offline)</h4>
+              <h5>19th & 20th March 2021</h5>
+              <p><em>19th & 20th March 2021</em></p>
+              <p>Participation</p>
+            </div>
             <h3 class="resume-title">Hobbies</h3>
             <div class="resume-item pb-0">
               <p>Playing Cricket, Watching Movies, Dancing and Listening Music</p>
@@ -280,8 +301,19 @@
             <h3 class="resume-title">Professional Experience</h3>
             <!-- <div class="resume-item pb-0"> -->
             <div class="resume-item">
+              <h4>Associate Software Developer at Cyntexa</h4>
+              <h5>July 2022 - Present</h5>
+              <p><em>Jaipur, Raj.</em></p>
+              <ul>
+                <li>Customized, developed, enhanced & supported the applications of Salesforce CRM</li>
+                <li>Aligned development activities to build future
+                  integration points in custom applications</li>
+                  <li>Reach : <a href="https://cyntexa.com/" target="blank">Cyntexa</a></li>
+              </ul>
+            </div>
+            <div class="resume-item">
               <h4>Web Designer and Presenter at VCF</h4>
-              <h5>2020 - Present</h5>
+              <h5>August 2020 - April 2022</h5>
               <p><em>Jaipur, Raj.</em></p>
               <ul>
                 <li>Won Soft Tech Hackathon conducted by Anand ICE on 9th and 10th March, 2021</li>
@@ -329,7 +361,7 @@
               </div> -->
 
           </div>
-          <a id="resumebtn" target="blank" href="assets/resume/Resume - Rahul Kumar Jhamtani.pdf" download>Download Resume</a>
+          <a id="resumebtn" target="blank" href="assets/resume/Rahul Kumar Jhamtani Resume.pdf" download>Download Resume</a>
         </div>
 
       </div>
