--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
               <p><em>Jaipur, Raj.</em></p>
               <ul>
                 <li>Started a new journey on June 11, 2021</li>
-                <li>Interned as a Front-End Developer and felt great to work for an NGO</li>
+                <li>Worked as a Front-End Developer and felt great to work for an NGO</li>
                 <li>Made gallery for them which contains multiple images of their events</li>
                 <li>Reach : <a href="https://tribalconnect.org.in/" target="blank">Tribal Connect : Connecting Our
                     Roots</a></li>
