--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
               </div> -->
 
           </div>
-          <a id="resumebtn" target="blank" href="assets/resume/Rahul Kumar Jhamtani Resume.pdf" download>Download Resume</a>
+          <a id="resumebtn" target="blank" href="assets/resume/Rahul Kumar Jhamtani.pdf" download>Download Resume</a>
         </div>
 
       </div>
