--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
               </ul>
             </div>
             <div class="resume-item">
-              <h4>Web Designer and Presenter at VCF</h4>
+              <h4>Web Developer and Presenter at VCF</h4>
               <h5>August 2020 - April 2022</h5>
               <p><em>Jaipur, Raj.</em></p>
               <ul>
