--- a/index.html
+++ b/index.html
@@ -96,13 +96,12 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>Hello, I am pursuing 4th year Computer Science Engineering from Anand ICE and I am interested in Web
-            designing, Web development and Software development.</p>
+          <p>A highly motivated Computer Science Engineer with a Bachelor of Technology degree from Anand International College of Engineering. I have completed my Abroad Training program organized by Ajman University, UAE.</p>
         </div>
         <br>
         <div class="row">
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-            <h3>UI Designer &amp; Web Developer.</h3>
+            <h3>Salesforce Developer &amp; Web Developer</h3>
             <br><br>
             <div class="row">
               <div class="col-lg-6">
@@ -135,9 +134,7 @@
         <div class="section-title">
           <h2>Skills</h2>
           <p>
-            Not from a technical background but having core interest in computers and especially in desigining part. So
-            I decided to pursue <b>Computer Science</b> branch in college and I am working on my programming skills
-            since 2016.
+            Alongside my proficiency in Salesforce, I have a keen interest in web development and have engaged in internships focused on web designing and development. My proficiency in technologies like HTML, CSS, JS, and MySQL has allowed me to create engaging and dynamic web experiences, and I am eager to further enhance my skills in this domain.
           </p>
         </div>
 
@@ -241,10 +238,7 @@
 
         <div class="section-title">
           <h2>Resume</h2>
-          <p>I want to work across the full stack of Software Development. I've built a few projects by myself and I'm
-            looking for a role where I can grow and learn from other experienced team members and my friends. | Short
-            term goal : Learning Node JS, React JS and Angular JS for enhancing my programming skills. | Long term goal
-            : To become a software engineer and provide employment to people.</p>
+          <p>I am thriving as an Associate Software Developer at Cyntexa, a leading Salesforce Crest (Gold) Consulting Partner. In this role, I have gained extensive expertise in Salesforce development, having worked across three clouds: Sales Cloud, Vlocity Cloud, and Commerce Cloud.</p>
         </div>
 
         <div class="row">
@@ -278,6 +272,11 @@
                 examination catering to Science and Commerce faculties.</p>
             </div>
             <h3 class="resume-title">Participation</h3>
+            <div class="resume-item">
+              <h4>Winter Study Tour</h4>
+              <h5>29th January - 4th February 2023</h5>
+              <p><em>Ajman University, UAE</em></p>
+            </div>
             <div class="resume-item">
               <h4>SoftTech Hack-2021(Offline and Online)</h4>
               <h5>9th & 10th March 2021</h5>
