--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
               <h4>Bachelors of Technology</h4>
-              <h5>2019 - Present</h5>
+              <h5>2019 - 2023</h5>
               <p><em>Anand International College of Engineering, Jaipur, Raj.</em></p>
               <p>Anand-ICE, one of the finest private engineering colleges in Jaipur, has probably the best brains as
                 teachers and scientists to facilitate premium academic excellence along with the nuances of ethics and
@@ -360,7 +360,7 @@
               </div> -->
 
           </div>
-          <a id="resumebtn" target="blank" href="assets/resume/Rahul Kumar Jhamtani.pdf" download>Download Resume</a>
+          <a id="resumebtn" target="blank" href="assets/resume/Resume_Rahul Kumar Jhamtani.pdf" download>Download Resume</a>
         </div>
 
       </div>
