--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
 
         <div class="section-title">
           <h2>Resume</h2>
-          <p>I am thriving as a Software Developer at Cyntexa, a leading Salesforce Crest (Gold) Consulting Partner. In this role, I have gained extensive expertise in Salesforce development, having worked across three clouds: Sales Cloud, Vlocity Cloud, and Commerce Cloud.</p>
+          <p>I am working as an Associate at PwC India. Before this, I worked as a Salesforce Developer at Cyntexa for 2 years and 9 months, from July 2022 to March 2025.</p>
         </div>
 
         <div class="row">
